--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,24 @@
     <artifactId>springui</artifactId>
     <version>1.0.0</version>
     <name>springui</name>
-    <description>Demo project for Spring Boot</description>
+    <description>a simple ui framework for spring boot</description>
+    <url>https://github.com/MengFly/springui</url>
+
+    <licenses>
+        <license>
+            <name>Apache License 2.0</name>
+            <url>https://opensource.org/licenses/Apache-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>mengfly</name>
+            <email>www.wangpengfei99@gmail.com</email>
+            <url>https://github.com/mengfly</url>
+        </developer>
+    </developers>
 
     <properties>
         <java.version>1.8</java.version>
@@ -51,20 +68,30 @@
                     <execution>
                         <id>attach-sources</id>
                         <goals>
-                            <goal>jar</goal>
+                            <goal>jar-no-fork</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <charset>UTF-8</charset>
+                    <docencoding>UTF-8</docencoding>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
-    <developers>
-        <developer>
-            <name>mengfly</name>
-            <email>www.wangpengfei99@gmail.com</email>
-            <url>https://gitee.com/mengfly_p</url>
-        </developer>
-    </developers>
 
 </project>
